--- a/WordPress/Resources/ar.lproj/Localizable.strings
+++ b/WordPress/Resources/ar.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-07 16:54:07+0000 */
+/* Translation-Revision-Date: 2021-07-28 16:54:07+0000 */
 /* Plural-Forms: nplurals=6; plural=(n == 0) ? 0 : ((n == 1) ? 1 : ((n == 2) ? 2 : ((n % 100 >= 3 && n % 100 <= 10) ? 3 : ((n % 100 >= 11 && n % 100 <= 99) ? 4 : 5)))); */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: ar */
@@ -33,17 +33,19 @@
 /* Title for button when a site is missing server credentials. %1$@ is a placeholder for the string 'Enter your server credentials'. */
 "%1$@ to fix threats." = "%1$@ لإصلاح التهديدات.";
 
-/* Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Singular button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Like" = "%1$d إعجاب";
 
-/* Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Plural button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Likes" = "%1$d إعجابات";
 
-/* Singular format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d blogger likes this." = "%1$d مدوّن معجب بهذا.";
+/* Singular format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d blogger_ likes this." = "⁦%1$d⁩ مدون معجب بهذا.";
 
-/* Plural format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d bloggers like this." = "%1$d مدوِّنون معجبون بهذا.";
+/* Plural format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d bloggers_ like this." = "⁦%1$d⁩ من المدونين معجبين بهذا.";
 
 /* Format string for displaying number of completed quickstart tutorials. %1$d is number completed, %2$d is total number of tutorials available. */
 "%1$d of %2$d completed" = "تم استكمال %1$d من %2$d";
@@ -245,8 +247,7 @@
 "(Untitled)" = "(بدون اسم)";
 
 /* (no title)
-   Lets a user know that a local draft does not have a title.
-   the post has no title. */
+   Lets a user know that a local draft does not have a title. */
 "(no title)" = "(بدون عنوان)";
 
 /* Example Comment notification displayed in the prologue carousel of the app. Username should be marked with * characters and will be displayed as bold text. */
@@ -507,7 +508,7 @@
 "Add image, or avatar, to represent this new account." = "أضف صورة أو أفاتار لتمثيل هذا الحساب الجديد.";
 
 /* No comment provided by engineer. */
-"Add link" = "Add link";
+"Add link" = "إضافة رابط";
 
 /* No comment provided by engineer. */
 "Add link text" = "إضافة نصّ للرابط";
@@ -1064,12 +1065,6 @@
 
 /* Title for a list of different button styles. */
 "Button Style" = "نمط الزر";
-
-/* No comment provided by engineer. */
-"Button inside" = "زر داخلي";
-
-/* No comment provided by engineer. */
-"Button outside" = "زر خارجي";
 
 /* No comment provided by engineer. */
 "Button position" = "موضع الزر";
@@ -2285,6 +2280,12 @@
 "Double tap to open Bottom Sheet with available options" = "النقر المزدوج لفتح الورقة السفلية التي تحتوي على خيارات متوافرة";
 
 /* No comment provided by engineer. */
+"Double tap to preview page." = "انقر نقرًا مزدوجًا لمعاينة صفحة.";
+
+/* No comment provided by engineer. */
+"Double tap to preview post." = "انقر نقرًا مزدوجًا لمعاينة مقالة.";
+
+/* No comment provided by engineer. */
 "Double tap to redo last change" = "الضغط المزدوج لإعادة آخر تغيير";
 
 /* No comment provided by engineer. */
@@ -2342,7 +2343,7 @@
 "Duplicate block" = "تكرار المكوِّن";
 
 /* No comment provided by engineer. */
-"EDIT LINK" = "EDIT LINK";
+"EDIT LINK" = "تحرير رابط";
 
 /* Used for Geo-tagging posts by latitude and longitude. Basic form. */
 "East" = "شرق";
@@ -2465,17 +2466,20 @@
 /* Overlay message displayed when export content started */
 "Email sent!" = "تم إرسال البريد الإلكتروني!";
 
+/* No comment provided by engineer. */
+"Embed block previews are coming soon" = "يتوافر تضمين معاينات المكوِّن قريبًا";
+
 /* translators: accessibility text. %s: Embed caption. */
-"Embed caption. %s" = "Embed caption. %s";
+"Embed caption. %s" = "قم بتضمين تسمية توضيحية. %s";
 
 /* translators: accessibility text. Empty Embed caption. */
-"Embed caption. Empty" = "Embed caption. Empty";
+"Embed caption. Empty" = "قم بتضمين تسمية توضيحية. فارغ";
 
 /* No comment provided by engineer. */
-"Embed link" = "Embed link";
+"Embed link" = "تضمين رابط";
 
-/* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content.";
+/* No comment provided by engineer. */
+"Embed previews not yet available" = "تضمين المعاينات ليس متاحًا بعد";
 
 /* Title for the Emoji section */
 "Emoji" = "إيموجي Emoji";
@@ -2494,7 +2498,7 @@
 "Enable Quick Start for Site" = "تمكين البدء السريع للموقع";
 
 /* Title for the button that will enable the site stats module. */
-"Enable Site Stats" = "Enable Site Stats";
+"Enable Site Stats" = "تفعيل إحصاءات الموقع";
 
 /* NSMicrophoneUsageDescription: Sentence to justify why the app asks permission from the user to access the device microphone. */
 "Enable microphone access to record sound in your videos." = "قم بتمكين الوصول إلى الميكروفون لتسجيل الصوت في فيديوهاتك.";
@@ -2506,10 +2510,10 @@
 "Enable site notifications?" = "هل ترغب في تمكين التنبيهات في الموقع؟";
 
 /* Error message shown when trying to view Stats and the stats module is disabled. */
-"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Enable site stats to see detailed information about your traffic, likes, comments, and subscribers.";
+"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "قم بتفعيل إحصاءات الموقع لمراجعة معلوماتك المفصّلة حول حركة المرور ومرات الإعجاب والتعليقات والمشتركين.";
 
 /* Text displayed while activating the site stats module. */
-"Enabling Site Stats..." = "Enabling Site Stats...";
+"Enabling Site Stats..." = "جارٍ تمكين إحصاءات الموقع...";
 
 /* Title of a row displayed on the debug screen used to display a screen that shows a list of encrypted logs */
 "Encrypted Logs" = "سجلات مشفَّرة";
@@ -3431,7 +3435,7 @@
 "Invalid URL. Audio file not found." = "رابط غير صالح. لم يتم العثور على ملف صوت.";
 
 /* No comment provided by engineer. */
-"Invalid URL. Please enter a valid URL." = "Invalid URL. Please enter a valid URL.";
+"Invalid URL. Please enter a valid URL." = "رابط غير صالح. الرجاء إدخال عنوان موقع صالح.";
 
 /* Error message generated when announcement service is unable to return a valid endpoint. */
 "Invalid endpoint" = "نقطة نهاية غير صالحة";
@@ -3482,7 +3486,7 @@
 "Jetpack %@ or later is required. Do you want to update Jetpack?" = "يلزم الإصدار %@ من Jetpack أو إصدار أحدث منه. هل تريد تحديث Jetpack؟";
 
 /* Message for Jetpack users that have multisite WP installation, thus Restore is not available. %1$@ is a placeholder for the string 'visit our documentation page'. */
-"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@.";
+"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "يوفِّر Jetpack Backup الخاصة بعمليات تثبيت مواقع متعددة نسخًا احتياطية قابلة للتنزيل، ولا يوفِّر عمليات استعادة من نقرة واحدة. لمزيد من المعلومات %1$@.";
 
 /* Title of the button which opens the Jetpack FAQ page. */
 "Jetpack FAQ" = "الأسئلة الشائعة عن Jetpack";
@@ -3619,11 +3623,11 @@
 /* Title displayed for selection of custom app icons that have white backgrounds. */
 "Light backgrounds" = "خلفيات فاتحة";
 
-/* Like (verb)
+/* Button title to Like a comment.
+   Like (verb)
    Like a post.
    Likes a Comment
-   Text for the 'like' button. Tapping marks a post in the reader as 'liked'.
-   Verb. Button title. Tap to like a commnet */
+   Text for the 'like' button. Tapping marks a post in the reader as 'liked'. */
 "Like" = "أعجبني";
 
 /* A comment is marked as liked */
@@ -3632,7 +3636,6 @@
 /* Filters Likes Notifications
    Label for Period Overview likes
    Label for post likes count.
-   Noun. Button title.  Tap to like a comment.
    Stats Likes Label
    Text for the 'like' button. Tapping removes the 'liked' status from a post.
    Title of the Likes Reader tab
@@ -3831,7 +3834,7 @@
 "Logs" = "السجلات";
 
 /* Title for the error view when the stats module is disabled. */
-"Looking for stats?" = "Looking for stats?";
+"Looking for stats?" = "هل تبحث عن الإحصاءات؟";
 
 /* Used with posts that are geo-tagged. Let's the user know the the app is looking up the address for the coordinates tagging the post. */
 "Looking up address..." = "جاري البحث عن عنوان...";
@@ -4234,7 +4237,7 @@
 "No Items" = "لا توجد عناصر";
 
 /* Title when users have no Jetpack sites. */
-"No Jetpack sites found" = "No Jetpack sites found";
+"No Jetpack sites found" = "لم يتم العثور على أي مواقع Jetpack";
 
 /* Menus selection title for setting a location to not use a menu. */
 "No Menu" = "لا توجد قائمة";
@@ -4279,7 +4282,7 @@
 "No available sites" = "لا توجد مواقع متاحة";
 
 /* No comment provided by engineer. */
-"No button" = "بدون زر";
+"No blocks found" = "لم يتم العثور على أي مكوِّنات";
 
 /* An option in a list. Automatically approve no comments. */
 "No comments" = "لا توجد تعليقات";
@@ -4549,13 +4552,16 @@
 /* Title of a button style */
 "Official Buttons" = "الأزرار الرسمية";
 
-/* Notifications +2 Days Section Header */
+/* Comments +2 Days Section Header
+   Notifications +2 Days Section Header */
 "Older than 2 days" = "قبل يومين";
 
-/* Notifications Months Section Header */
+/* Comments Months Section Header
+   Notifications Months Section Header */
 "Older than a Month" = "قبل شهر";
 
-/* Notifications Weeks Section Header */
+/* Comments Weeks Section Header
+   Notifications Weeks Section Header */
 "Older than a Week" = "قبل أسبوع";
 
 /* Sort Order */
@@ -4789,9 +4795,6 @@
 /* Status for Media object that is being processed locally.
    Title of pending Comments filter. */
 "Pending" = "انتظار";
-
-/* No comment provided by engineer. */
-"Pending moderation" = "في انتظار الإدارة";
 
 /* Name for the status of a post pending review.
    Pending review
@@ -5142,6 +5145,12 @@
 
 /* Title on display preview error */
 "Preview Unavailable" = "المعاينة غير متوفرة";
+
+/* No comment provided by engineer. */
+"Preview page" = "معاينة الصفحة";
+
+/* No comment provided by engineer. */
+"Preview post" = "معاينة المقالة";
 
 /* Description of a Quick Start Tour */
 "Preview your new site to see what your visitors will see." = "يمكنك معاينة موقعك الجديد لرؤية ما سيراه الزائرون.";
@@ -5617,6 +5626,9 @@
 /* Cancels a pending Email Change */
 "Revert Pending Change" = "إرجاع التغيير المعلق";
 
+/* Accessibility hint describing what happens if the undo button is tapped. */
+"Reverts the action performed on this notification." = "تحويل الإجراء الذي تم تنفيذه بشأن هذا التنبيه.";
+
 /* Title of a Quick Start Tour */
 "Review site pages" = "مراجعة صفحات الموقع";
 
@@ -5767,6 +5779,9 @@
 
 /* No comment provided by engineer. */
 "Search block label. Current text is" = "تسمية مكون البحث. النص الحالي هو";
+
+/* No comment provided by engineer. */
+"Search blocks" = "البحث في المكوّنات";
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "زر البحث. نص الزر الحالي هو";
@@ -7083,7 +7098,8 @@
 /* Message explaining that Jetpack needs to be installed for a particular site. Reads like 'To use this app for example.com you'll need to have... */
 "To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "لاستخدام هذا التطبيق لـ %@، سيتعيَّن عليك تثبيت إضافة Jetpack وتفعيلها.";
 
-/* Insights 'Today' header
+/* Comments Today Section Header
+   Insights 'Today' header
    Label for most recent stat row.
    Notifications Today Section Header */
 "Today" = "اليوم";
@@ -7195,6 +7211,9 @@
    Share extension error dialog retry button label. */
 "Try again" = "حاول مرة أخرى";
 
+/* No comment provided by engineer. */
+"Try another search term" = "تجربة مصطلح بحث آخر";
+
 /* Customize Insights button title */
 "Try it now" = "جرّبه الآن";
 
@@ -7284,6 +7303,9 @@
 
 /* Message displayed when opening the link to the downloadable backup fails. */
 "Unable to download file" = "تعذّر تنزيل الملف";
+
+/* No comment provided by engineer. */
+"Unable to embed media" = "يتعذر تضمين وسائط";
 
 /* The app failed to subscribe to the comments for the post */
 "Unable to follow conversation" = "غير قادر على متابعة المحادثة";
@@ -8025,7 +8047,7 @@
 "We're restoring your site back to %1$@." = "نحن بصدد استعادة موقعك إلى %1$@.";
 
 /* Description for label when the user's site is a multisite. */
-"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time.";
+"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "عذرًا، لكن عملية المسح على Jetpack Scan غير متوافقة مع تثبيت ووردبريس متعددة المواقع في الوقت الحالي.";
 
 /* A hint to users indicating a link to the downloadable backup file has also been sent to their email. */
 "We've also emailed you a link to your file." = "أرسلنا إليك أيضًا رابطًا إلى ملفك عبر البريد الإلكتروني.";
@@ -8088,6 +8110,12 @@
 /* Body text of alert asking if users want to try out the quick start checklist. */
 "We’ll walk you through the basics of building and growing your site" = "سنرشدك إلى أساسيات بناء موقعك وتنميته";
 
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the page." = "نعمل بجد على إضافة دعم المعاينات المضمَّنة. وفي هذه الأثناء، يمكنك معاينة المحتوى المضمَّن في الصفحة.";
+
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the post." = "نعمل بجد على إضافة دعم المعاينات المضمَّنة. وفي هذه الأثناء، يمكنك معاينة المحتوى المضمَّن في المقالة.";
+
 /* Body text of alert letting users know we've upgraded the quick start checklist. */
 "We’ve added more tasks to help you grow your audience." = "لقد أضفنا المزيد من المهام لمساعدتك على تنمية جمهورك.";
 
@@ -8102,6 +8130,9 @@
 
 /* Title displayed via UIAlertController when a user inserts a document into a post. */
 "What do you want to do with this file: upload it and add a link to the file into your post, or add the contents of the file directly to the post?" = "ما الذي ترغب في فعله بهذا الملف: هل ترغب في رفعه وإضافة رابط للملف إلى مقالتك، أو إضافة محتويات الملف مباشرة إلى المقالة؟";
+
+/* No comment provided by engineer. */
+"What is a block?" = "ماذا يُقصد بالمكوِّن؟";
 
 /* No comment provided by engineer. */
 "What is alt text?" = "ماهو النص البديل؟";
@@ -8208,7 +8239,7 @@
 "WordPress for iOS Support" = "دعم ووردبريس لـ iOS";
 
 /* Title for label when the user's site is a multisite. */
-"WordPress multisites are not supported" = "WordPress multisites are not supported";
+"WordPress multisites are not supported" = "مواقع ووردبريس المتعددة غير مدعومة";
 
 /* Explaining to the user why the app needs access to the device location. */
 "WordPress needs permission to access your device's current location in order to add it to your post. Please update your privacy settings." = "يحتاج ووردبريس إلى صلاحية للوصول إلى الموقع الحالي لجهازك لإضافته إلى مقالتك. يُرجى تحديث إعدادات الخصوصية لديك.";
@@ -8296,7 +8327,8 @@
 /* Phrase displayed to begin a quick start tour that's been suggested. */
 "Yes, show me" = "نعم، وضِّح لي";
 
-/* Notifications Yesterday Section Header */
+/* Comments Yesterday Section Header
+   Notifications Yesterday Section Header */
 "Yesterday" = "الأمس";
 
 /* Paragraph displayed in the tableview header. The placholders are for the current username, highlight text and the current display name. */
@@ -8640,7 +8672,7 @@
 "viewer" = "مشاهد";
 
 /* Portion of a message for Jetpack users that have multisite WP installation, thus Restore is not available. This part is a link, colored with a different color. */
-"visit our documentation page" = "visit our documentation page";
+"visit our documentation page" = "زيارة صفحة الوثائق الخاصة بنا";
 
 /* Second part of delete screen title stating [the site] will be unavailable in the future. */
 "will be unavailable in the future." = "لن يكون متوفرًا في المستقبل.";
