--- a/WordPress/Resources/de.lproj/Localizable.strings
+++ b/WordPress/Resources/de.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-23 12:54:08+0000 */
+/* Translation-Revision-Date: 2021-07-27 20:22:56+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: de */
@@ -33,17 +33,19 @@
 /* Title for button when a site is missing server credentials. %1$@ is a placeholder for the string 'Enter your server credentials'. */
 "%1$@ to fix threats." = "%1$@, um Bedrohungen zu beheben.";
 
-/* Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Singular button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Like" = "%1$d Gefällt mir";
 
-/* Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Plural button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Likes" = "%1$d Gefällt mir";
 
-/* Singular format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d blogger likes this." = "%1$d Blogger gefällt das.";
+/* Singular format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d blogger_ likes this." = "%1$d Blogger_ gefällt das.";
 
-/* Plural format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d bloggers like this." = "%1$d Bloggern gefällt das.";
+/* Plural format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d bloggers_ like this." = "%1$d Bloggern_ gefällt das.";
 
 /* Format string for displaying number of completed quickstart tutorials. %1$d is number completed, %2$d is total number of tutorials available. */
 "%1$d of %2$d completed" = "%1$d von %2$d komplett";
@@ -245,8 +247,7 @@
 "(Untitled)" = "(Ohne Titel)";
 
 /* (no title)
-   Lets a user know that a local draft does not have a title.
-   the post has no title. */
+   Lets a user know that a local draft does not have a title. */
 "(no title)" = "(kein Titel)";
 
 /* Example Comment notification displayed in the prologue carousel of the app. Username should be marked with * characters and will be displayed as bold text. */
@@ -1000,7 +1001,7 @@
 "Block settings" = "Blockeinstellungen";
 
 /* The title of a button that triggers blocking a site from the user's reader. */
-"Block this site" = "Block this site";
+"Block this site" = "Diese Website blockieren";
 
 /* Notice title when blocking a site succeeds. */
 "Blocked site" = "Blockierte Website";
@@ -1064,12 +1065,6 @@
 
 /* Title for a list of different button styles. */
 "Button Style" = "Buttonstil";
-
-/* No comment provided by engineer. */
-"Button inside" = "Button innen";
-
-/* No comment provided by engineer. */
-"Button outside" = "Button außen";
 
 /* No comment provided by engineer. */
 "Button position" = "Button-Position";
@@ -1457,7 +1452,7 @@
 "Colorful backgrounds" = "Farbige Hintergründe";
 
 /* No comment provided by engineer. */
-"Columns Settings" = "Columns Settings";
+"Columns Settings" = "Spalteneinstellungen";
 
 /* First story intro item description */
 "Combine photos, videos, and text to create engaging and tappable story posts that your visitors will love." = "Kombiniere Fotos, Videos und Text, um ansprechende und antippbare Story-Beiträge zu erstellen, die deine Besucher begeistern.";
@@ -2285,6 +2280,12 @@
 "Double tap to open Bottom Sheet with available options" = "Tippe zweimal, um das Bottom Sheet mit den verfügbaren Optionen zu öffnen";
 
 /* No comment provided by engineer. */
+"Double tap to preview page." = "Zur Vorschau der Seite zweimal tippen";
+
+/* No comment provided by engineer. */
+"Double tap to preview post." = "Zur Vorschau des Beitrags zweimal tippen";
+
+/* No comment provided by engineer. */
 "Double tap to redo last change" = "Zum Wiederholen der letzten Änderung zweimal tippen";
 
 /* No comment provided by engineer. */
@@ -2465,6 +2466,9 @@
 /* Overlay message displayed when export content started */
 "Email sent!" = "E-Mail gesendet!";
 
+/* No comment provided by engineer. */
+"Embed block previews are coming soon" = "Eingebettete Block-Vorschau demnächst verfügbar";
+
 /* translators: accessibility text. %s: Embed caption. */
 "Embed caption. %s" = "Beschriftung einbetten %s";
 
@@ -2474,8 +2478,8 @@
 /* No comment provided by engineer. */
 "Embed link" = "Link einbetten";
 
-/* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Eingebetteter Inhalt von %s kann derzeit nicht im mobilen Editor angezeigt werden. Lass dir eine Vorschau der Seite anzeigen, um den eingebetteten Inhalt zu sehen.";
+/* No comment provided by engineer. */
+"Embed previews not yet available" = "Eingebettete Vorschau noch nicht verfügbar";
 
 /* Title for the Emoji section */
 "Emoji" = "Emoji";
@@ -2890,7 +2894,7 @@
 "Follow other sites" = "Anderen Websites folgen";
 
 /* Verb. An option to follow a site. */
-"Follow site" = "Follow site";
+"Follow site" = "Website folgen";
 
 /* Screen title. Reader select interests title label text. */
 "Follow topics" = "Themen folgen";
@@ -3619,11 +3623,11 @@
 /* Title displayed for selection of custom app icons that have white backgrounds. */
 "Light backgrounds" = "Helle Hintergründe";
 
-/* Like (verb)
+/* Button title to Like a comment.
+   Like (verb)
    Like a post.
    Likes a Comment
-   Text for the 'like' button. Tapping marks a post in the reader as 'liked'.
-   Verb. Button title. Tap to like a commnet */
+   Text for the 'like' button. Tapping marks a post in the reader as 'liked'. */
 "Like" = "Like";
 
 /* A comment is marked as liked */
@@ -3632,7 +3636,6 @@
 /* Filters Likes Notifications
    Label for Period Overview likes
    Label for post likes count.
-   Noun. Button title.  Tap to like a comment.
    Stats Likes Label
    Text for the 'like' button. Tapping removes the 'liked' status from a post.
    Title of the Likes Reader tab
@@ -3677,7 +3680,7 @@
 "Link inserted" = "Link eingefügt";
 
 /* No comment provided by engineer. */
-"Link text" = "Link text";
+"Link text" = "Link-Text";
 
 /* Action. Label for navigate and display links to other posts on the site */
 "Link to existing content" = "Mit bestehendem Inhalt verlinken";
@@ -4168,7 +4171,7 @@
 "New" = "Neu";
 
 /* Blocklist Keyword Insertion Title */
-"New Blocklist Word" = "New Blocklist Word";
+"New Blocklist Word" = "Neues Sperrlisten-Wort";
 
 /* Title of alert informing users about the Reader Save for Later feature. */
 "New Custom App Icons" = "Neue benutzerdefinierte App-Icons";
@@ -4279,7 +4282,7 @@
 "No available sites" = "Keine verfügbaren Websites";
 
 /* No comment provided by engineer. */
-"No button" = "Kein Button";
+"No blocks found" = "Keine Blöcke gefunden.";
 
 /* An option in a list. Automatically approve no comments. */
 "No comments" = "Keine Kommentare";
@@ -4549,13 +4552,16 @@
 /* Title of a button style */
 "Official Buttons" = "Offizielle Buttons";
 
-/* Notifications +2 Days Section Header */
+/* Comments +2 Days Section Header
+   Notifications +2 Days Section Header */
 "Older than 2 days" = "Älter als 2 Tage";
 
-/* Notifications Months Section Header */
+/* Comments Months Section Header
+   Notifications Months Section Header */
 "Older than a Month" = "Älter als ein Monat";
 
-/* Notifications Weeks Section Header */
+/* Comments Weeks Section Header
+   Notifications Weeks Section Header */
 "Older than a Week" = "Älter als eine Woche";
 
 /* Sort Order */
@@ -4789,9 +4795,6 @@
 /* Status for Media object that is being processed locally.
    Title of pending Comments filter. */
 "Pending" = "Ausstehend";
-
-/* No comment provided by engineer. */
-"Pending moderation" = "Ausstehende Moderation";
 
 /* Name for the status of a post pending review.
    Pending review
@@ -5142,6 +5145,12 @@
 
 /* Title on display preview error */
 "Preview Unavailable" = "Vorschau nicht verfügbar";
+
+/* No comment provided by engineer. */
+"Preview page" = "Seitenvorschau";
+
+/* No comment provided by engineer. */
+"Preview post" = "Beitragsvorschau";
 
 /* Description of a Quick Start Tour */
 "Preview your new site to see what your visitors will see." = "Zeige eine Vorschau deiner neuen Website an, um zu sehen, wie sie deinen Besuchern angezeigt wird.";
@@ -5617,6 +5626,9 @@
 /* Cancels a pending Email Change */
 "Revert Pending Change" = "Ausstehende Änderung rückgängig machen";
 
+/* Accessibility hint describing what happens if the undo button is tapped. */
+"Reverts the action performed on this notification." = "Dadurch wird der Vorgang, den diese Benachrichtigung ausgelöst hat, rückgängig gemacht.";
+
 /* Title of a Quick Start Tour */
 "Review site pages" = "Website-Seiten prüfen";
 
@@ -5767,6 +5779,9 @@
 
 /* No comment provided by engineer. */
 "Search block label. Current text is" = "Blocklabel suchen Aktueller Text ist";
+
+/* No comment provided by engineer. */
+"Search blocks" = "Blöcke suchen";
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "Button suchen Aktueller Button-Text ist";
@@ -7083,7 +7098,8 @@
 /* Message explaining that Jetpack needs to be installed for a particular site. Reads like 'To use this app for example.com you'll need to have... */
 "To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "Um diese App für %@ zu verwenden, muss das Jetpack-Plugin installiert und aktiviert sein.";
 
-/* Insights 'Today' header
+/* Comments Today Section Header
+   Insights 'Today' header
    Label for most recent stat row.
    Notifications Today Section Header */
 "Today" = "Heute";
@@ -7195,6 +7211,9 @@
    Share extension error dialog retry button label. */
 "Try again" = "Erneut versuchen";
 
+/* No comment provided by engineer. */
+"Try another search term" = "Versuche es mit einem anderen Suchbegriff";
+
 /* Customize Insights button title */
 "Try it now" = "Jetzt versuchen";
 
@@ -7284,6 +7303,9 @@
 
 /* Message displayed when opening the link to the downloadable backup fails. */
 "Unable to download file" = "Datei kann nicht heruntergeladen werden";
+
+/* No comment provided by engineer. */
+"Unable to embed media" = "Medien können nicht eingebettet werden";
 
 /* The app failed to subscribe to the comments for the post */
 "Unable to follow conversation" = "Der Unterhaltung kann nicht gefolgt werden";
@@ -7426,7 +7448,7 @@
 "Unfollow conversation by email" = "Unterhaltung per E-Mail nicht mehr folgen";
 
 /* Verb. An option to unfollow a site. */
-"Unfollow site" = "Unfollow site";
+"Unfollow site" = "Website entfolgen";
 
 /* Notice title when unfollowing a site succeeds.
    User unfollowed a site. */
@@ -8088,6 +8110,12 @@
 /* Body text of alert asking if users want to try out the quick start checklist. */
 "We’ll walk you through the basics of building and growing your site" = "Wir führen dich durch die Grundlagen des Aufbaus und der Erweiterung deiner Website";
 
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the page." = "Wir arbeiten daran, Unterstützung für die eingebettete Vorschau hinzuzufügen. In der Zwischenzeit kannst du den eingebetteten Inhalt auf deiner Seite als Vorschau sehen. ";
+
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the post." = "Wir arbeiten daran, Unterstützung für die eingebettete Vorschau hinzuzufügen. In der Zwischenzeit kannst du den eingebetteten Inhalt auf deinem Beitrag als Vorschau sehen. ";
+
 /* Body text of alert letting users know we've upgraded the quick start checklist. */
 "We’ve added more tasks to help you grow your audience." = "Wir haben weitere Aufgaben hinzugefügt, um dir zu helfen, dein Publikum zu vergrößern.";
 
@@ -8102,6 +8130,9 @@
 
 /* Title displayed via UIAlertController when a user inserts a document into a post. */
 "What do you want to do with this file: upload it and add a link to the file into your post, or add the contents of the file directly to the post?" = "Was möchtest du mit dieser Datei machen? Möchtest du sie hochladen und deinem Beitrag einen Link zu der Datei hinzufügen oder möchtest du die Dateiinhalte direkt in den Beitrag einfügen?";
+
+/* No comment provided by engineer. */
+"What is a block?" = "Was ist ein Block?";
 
 /* No comment provided by engineer. */
 "What is alt text?" = "Was ist Alt-Text?";
@@ -8296,7 +8327,8 @@
 /* Phrase displayed to begin a quick start tour that's been suggested. */
 "Yes, show me" = "Ja, anzeigen";
 
-/* Notifications Yesterday Section Header */
+/* Comments Yesterday Section Header
+   Notifications Yesterday Section Header */
 "Yesterday" = "Gestern";
 
 /* Paragraph displayed in the tableview header. The placholders are for the current username, highlight text and the current display name. */
@@ -8422,7 +8454,7 @@
 "You seem to have installed a mobile plugin from DudaMobile which is preventing the app to connect to your blog" = "Du hast anscheinend ein Mobil-Plugin von DudaMobile installiert, welche die App davon abhält, sich mit deinem Blog zu verbinden.";
 
 /* Message displayed in ignore threat alert. %1$@ is a placeholder for the blog name. */
-"You shouldn’t ignore a security issue unless you are absolutely sure it’s harmless. If you choose to ignore this threat, it will remain on your site \"%1$@\"." = "You shouldn’t ignore a security issue unless you are absolutely sure it’s harmless. If you choose to ignore this threat, it will remain on your site \"%1$@\".";
+"You shouldn’t ignore a security issue unless you are absolutely sure it’s harmless. If you choose to ignore this threat, it will remain on your site \"%1$@\"." = "Ein Sicherheitsproblem solltest du nur ignorieren, wenn du dir absolut sicher bist, dass es harmlos ist. Wenn du diese Bedrohung ignorieren möchtest, bleibt sie weiterhin auf deiner Website „%1$@“ bestehen.";
 
 /* Paragraph text that needs to be highlighted */
 "You will not be able to change your username back." = "Du kannst deinen Benutzernamen nicht mehr zurücksetzen.";
