--- a/WordPress/Resources/es.lproj/Localizable.strings
+++ b/WordPress/Resources/es.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-13 17:11:39+0000 */
+/* Translation-Revision-Date: 2021-07-26 07:12:21+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: es */
@@ -33,17 +33,19 @@
 /* Title for button when a site is missing server credentials. %1$@ is a placeholder for the string 'Enter your server credentials'. */
 "%1$@ to fix threats." = "%1$@ para corregir las amenazas.";
 
-/* Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Singular button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Like" = "%1$d me gusta";
 
-/* Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Plural button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Likes" = "%1$d me gusta";
 
-/* Singular format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d blogger likes this." = "A %1$d bloguero le gusta esto.";
+/* Singular format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d blogger_ likes this." = "A %1$d bloguero_ le gusta esto.";
 
-/* Plural format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d bloggers like this." = "A %1$d blogueros les gusta esto.";
+/* Plural format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d bloggers_ like this." = "A %1$d blogueros_ les gusta esto.";
 
 /* Format string for displaying number of completed quickstart tutorials. %1$d is number completed, %2$d is total number of tutorials available. */
 "%1$d of %2$d completed" = "%1$d de %2$d completos";
@@ -245,8 +247,7 @@
 "(Untitled)" = "(Sin título)";
 
 /* (no title)
-   Lets a user know that a local draft does not have a title.
-   the post has no title. */
+   Lets a user know that a local draft does not have a title. */
 "(no title)" = "(sin título)";
 
 /* Example Comment notification displayed in the prologue carousel of the app. Username should be marked with * characters and will be displayed as bold text. */
@@ -1064,12 +1065,6 @@
 
 /* Title for a list of different button styles. */
 "Button Style" = "Estilo del botón";
-
-/* No comment provided by engineer. */
-"Button inside" = "Botón interior";
-
-/* No comment provided by engineer. */
-"Button outside" = "Botón exterior";
 
 /* No comment provided by engineer. */
 "Button position" = "Posición del botón";
@@ -2285,6 +2280,12 @@
 "Double tap to open Bottom Sheet with available options" = "Toca dos veces para abrir la hoja inferior con las opciones disponibles";
 
 /* No comment provided by engineer. */
+"Double tap to preview page." = "Toca dos veces para previsualizar la página.";
+
+/* No comment provided by engineer. */
+"Double tap to preview post." = "Toca dos veces para previsualizar la entrada.";
+
+/* No comment provided by engineer. */
 "Double tap to redo last change" = "Toca dos veces para rehacer el último cambio";
 
 /* No comment provided by engineer. */
@@ -2465,6 +2466,9 @@
 /* Overlay message displayed when export content started */
 "Email sent!" = "¡Correo electrónico enviado!";
 
+/* No comment provided by engineer. */
+"Embed block previews are coming soon" = "Pronto llegarán las vistas previas de los bloques incrustados";
+
 /* translators: accessibility text. %s: Embed caption. */
 "Embed caption. %s" = "Leyenda incrustada. %s";
 
@@ -2474,8 +2478,8 @@
 /* No comment provided by engineer. */
 "Embed link" = "Enlace incrustado";
 
-/* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "El contenido incrustado de %s no se puede ver en este momento en el editor móvil. Por favor, previsualiza la página para ver el contenido incrustado.";
+/* No comment provided by engineer. */
+"Embed previews not yet available" = "Todavía no están disponibles las vistas previas incrustadas";
 
 /* Title for the Emoji section */
 "Emoji" = "Emoji";
@@ -3619,11 +3623,11 @@
 /* Title displayed for selection of custom app icons that have white backgrounds. */
 "Light backgrounds" = "Fondos claros";
 
-/* Like (verb)
+/* Button title to Like a comment.
+   Like (verb)
    Like a post.
    Likes a Comment
-   Text for the 'like' button. Tapping marks a post in the reader as 'liked'.
-   Verb. Button title. Tap to like a commnet */
+   Text for the 'like' button. Tapping marks a post in the reader as 'liked'. */
 "Like" = "Me gusta";
 
 /* A comment is marked as liked */
@@ -3632,7 +3636,6 @@
 /* Filters Likes Notifications
    Label for Period Overview likes
    Label for post likes count.
-   Noun. Button title.  Tap to like a comment.
    Stats Likes Label
    Text for the 'like' button. Tapping removes the 'liked' status from a post.
    Title of the Likes Reader tab
@@ -4279,7 +4282,7 @@
 "No available sites" = "No hay sitios disponibles";
 
 /* No comment provided by engineer. */
-"No button" = "Sin botón";
+"No blocks found" = "No se han encontrado bloques";
 
 /* An option in a list. Automatically approve no comments. */
 "No comments" = "Sin comentarios";
@@ -4549,13 +4552,16 @@
 /* Title of a button style */
 "Official Buttons" = "Botones oficiales";
 
-/* Notifications +2 Days Section Header */
+/* Comments +2 Days Section Header
+   Notifications +2 Days Section Header */
 "Older than 2 days" = "Hace más de 2 días";
 
-/* Notifications Months Section Header */
+/* Comments Months Section Header
+   Notifications Months Section Header */
 "Older than a Month" = "Hace más de un mes";
 
-/* Notifications Weeks Section Header */
+/* Comments Weeks Section Header
+   Notifications Weeks Section Header */
 "Older than a Week" = "Hace más de una semana";
 
 /* Sort Order */
@@ -4789,9 +4795,6 @@
 /* Status for Media object that is being processed locally.
    Title of pending Comments filter. */
 "Pending" = "Pendiente";
-
-/* No comment provided by engineer. */
-"Pending moderation" = "Pendiente de moderación";
 
 /* Name for the status of a post pending review.
    Pending review
@@ -5142,6 +5145,12 @@
 
 /* Title on display preview error */
 "Preview Unavailable" = "Vista previa no disponible";
+
+/* No comment provided by engineer. */
+"Preview page" = "Previsualizar la página";
+
+/* No comment provided by engineer. */
+"Preview post" = "Vista previa de entrada";
 
 /* Description of a Quick Start Tour */
 "Preview your new site to see what your visitors will see." = "Previsualiza tu nuevo sitio para ver lo que verán tus visitantes.";
@@ -5617,6 +5626,9 @@
 /* Cancels a pending Email Change */
 "Revert Pending Change" = "Deshacer el cambio pendiente";
 
+/* Accessibility hint describing what happens if the undo button is tapped. */
+"Reverts the action performed on this notification." = "Revierte la acción realizada en este aviso.";
+
 /* Title of a Quick Start Tour */
 "Review site pages" = "Revisar las páginas del sitio";
 
@@ -5767,6 +5779,9 @@
 
 /* No comment provided by engineer. */
 "Search block label. Current text is" = "Etiqueta del bloque de búsqueda. El texto actual es";
+
+/* No comment provided by engineer. */
+"Search blocks" = "Buscar bloques";
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "Botón de búsqueda. El texto actual del botón es";
@@ -7083,7 +7098,8 @@
 /* Message explaining that Jetpack needs to be installed for a particular site. Reads like 'To use this app for example.com you'll need to have... */
 "To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "Para usar esta aplicación para %@ deberás tener el plugin de Jetpack instalado y activado.";
 
-/* Insights 'Today' header
+/* Comments Today Section Header
+   Insights 'Today' header
    Label for most recent stat row.
    Notifications Today Section Header */
 "Today" = "Hoy";
@@ -7195,6 +7211,9 @@
    Share extension error dialog retry button label. */
 "Try again" = "Intentarlo de nuevo";
 
+/* No comment provided by engineer. */
+"Try another search term" = "Prueba otro término de búsqueda";
+
 /* Customize Insights button title */
 "Try it now" = "Probar ahora";
 
@@ -7284,6 +7303,9 @@
 
 /* Message displayed when opening the link to the downloadable backup fails. */
 "Unable to download file" = "No es posible descargar el archivo";
+
+/* No comment provided by engineer. */
+"Unable to embed media" = "No se ha podido incrustar el medio";
 
 /* The app failed to subscribe to the comments for the post */
 "Unable to follow conversation" = "No se ha podido seguir la conversación";
@@ -8088,6 +8110,12 @@
 /* Body text of alert asking if users want to try out the quick start checklist. */
 "We’ll walk you through the basics of building and growing your site" = "Te llevaremos a través de los básicos de creación y crecimiento de tu sitio";
 
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the page." = "Estamos trabajando duro para añadir compatibilidad para vistas previas incrustadas. Mientras tanto, puedes previsualizar el contenido incrustado en la página.";
+
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the post." = "Estamos trabajando duro para añadir compatibilidad para vistas previas incrustadas. Mientras tanto, puedes previsualizar el contenido incrustado en la entrada.";
+
 /* Body text of alert letting users know we've upgraded the quick start checklist. */
 "We’ve added more tasks to help you grow your audience." = "Hemos añadido más tareas para ayudarte a hacer crecer tu audiencia.";
 
@@ -8102,6 +8130,9 @@
 
 /* Title displayed via UIAlertController when a user inserts a document into a post. */
 "What do you want to do with this file: upload it and add a link to the file into your post, or add the contents of the file directly to the post?" = "¿Qué quieres hacer con este archivo: subirlo y añadir un enlace al archivo en tu entrada, o añadir los contenidos del archivo directamente en la entrada?";
+
+/* No comment provided by engineer. */
+"What is a block?" = "¿Qué es un  bloque?";
 
 /* No comment provided by engineer. */
 "What is alt text?" = "¿Qué es el texto alt?";
@@ -8296,7 +8327,8 @@
 /* Phrase displayed to begin a quick start tour that's been suggested. */
 "Yes, show me" = "Sí, muéstrame cómo";
 
-/* Notifications Yesterday Section Header */
+/* Comments Yesterday Section Header
+   Notifications Yesterday Section Header */
 "Yesterday" = "Ayer";
 
 /* Paragraph displayed in the tableview header. The placholders are for the current username, highlight text and the current display name. */
