--- a/WordPress/Resources/fr.lproj/Localizable.strings
+++ b/WordPress/Resources/fr.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-23 11:54:08+0000 */
+/* Translation-Revision-Date: 2021-07-28 15:54:08+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: fr */
@@ -33,17 +33,19 @@
 /* Title for button when a site is missing server credentials. %1$@ is a placeholder for the string 'Enter your server credentials'. */
 "%1$@ to fix threats." = "%1$@ pour corriger les menaces.";
 
-/* Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Singular button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Like" = "%1$d mention J’aime";
 
-/* Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Plural button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Likes" = "%1$d mentions J’aime";
 
-/* Singular format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d blogger likes this." = "%1$d blogueur aime ceci.";
+/* Singular format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d blogger_ likes this." = "%1$d blogueur_ aime ceci.";
 
-/* Plural format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d bloggers like this." = "%1$d blogueurs aiment ceci.";
+/* Plural format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d bloggers_ like this." = "%1$d blogueurs_ aiment ceci.";
 
 /* Format string for displaying number of completed quickstart tutorials. %1$d is number completed, %2$d is total number of tutorials available. */
 "%1$d of %2$d completed" = "%1$d sur %2$d terminée";
@@ -245,8 +247,7 @@
 "(Untitled)" = "(Sans titre)";
 
 /* (no title)
-   Lets a user know that a local draft does not have a title.
-   the post has no title. */
+   Lets a user know that a local draft does not have a title. */
 "(no title)" = "(aucun titre)";
 
 /* Example Comment notification displayed in the prologue carousel of the app. Username should be marked with * characters and will be displayed as bold text. */
@@ -1064,12 +1065,6 @@
 
 /* Title for a list of different button styles. */
 "Button Style" = "Style du bouton";
-
-/* No comment provided by engineer. */
-"Button inside" = "Intérieur du bouton";
-
-/* No comment provided by engineer. */
-"Button outside" = "Extérieur du bouton";
 
 /* No comment provided by engineer. */
 "Button position" = "Position du bouton";
@@ -2285,6 +2280,12 @@
 "Double tap to open Bottom Sheet with available options" = "Toucher deux fois pour ouvrir la feuille du bas avec les options disponibles";
 
 /* No comment provided by engineer. */
+"Double tap to preview page." = "Appuyez deux fois pour prévisualiser la page.";
+
+/* No comment provided by engineer. */
+"Double tap to preview post." = "Appuyez deux fois pour prévisualiser l'article de blog.";
+
+/* No comment provided by engineer. */
 "Double tap to redo last change" = "Toucher deux fois pour restaurer la dernière modification";
 
 /* No comment provided by engineer. */
@@ -2465,6 +2466,9 @@
 /* Overlay message displayed when export content started */
 "Email sent!" = "E-mail envoyé !";
 
+/* No comment provided by engineer. */
+"Embed block previews are coming soon" = "Les prévisualisations de bloc embarqués seront prochainement disponibles";
+
 /* translators: accessibility text. %s: Embed caption. */
 "Embed caption. %s" = "Légende intégrée. %s";
 
@@ -2474,8 +2478,8 @@
 /* No comment provided by engineer. */
 "Embed link" = "Lien intégré";
 
-/* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Le contenu intégré à partir de %s n’est pas visible dans l’éditeur mobile pour le moment. Prévisualisez la page pour afficher le contenu intégré.";
+/* No comment provided by engineer. */
+"Embed previews not yet available" = "Aperçus embarqués pas encore disponibles";
 
 /* Title for the Emoji section */
 "Emoji" = "Emoji";
@@ -3619,11 +3623,11 @@
 /* Title displayed for selection of custom app icons that have white backgrounds. */
 "Light backgrounds" = "Arrière-plans clairs";
 
-/* Like (verb)
+/* Button title to Like a comment.
+   Like (verb)
    Like a post.
    Likes a Comment
-   Text for the 'like' button. Tapping marks a post in the reader as 'liked'.
-   Verb. Button title. Tap to like a commnet */
+   Text for the 'like' button. Tapping marks a post in the reader as 'liked'. */
 "Like" = "J'aime";
 
 /* A comment is marked as liked */
@@ -3632,7 +3636,6 @@
 /* Filters Likes Notifications
    Label for Period Overview likes
    Label for post likes count.
-   Noun. Button title.  Tap to like a comment.
    Stats Likes Label
    Text for the 'like' button. Tapping removes the 'liked' status from a post.
    Title of the Likes Reader tab
@@ -4279,7 +4282,7 @@
 "No available sites" = "Aucun site disponible";
 
 /* No comment provided by engineer. */
-"No button" = "Aucun bouton";
+"No blocks found" = "Aucun bloc trouvé";
 
 /* An option in a list. Automatically approve no comments. */
 "No comments" = "Aucun commentaire";
@@ -4549,13 +4552,16 @@
 /* Title of a button style */
 "Official Buttons" = "Boutons officiels";
 
-/* Notifications +2 Days Section Header */
+/* Comments +2 Days Section Header
+   Notifications +2 Days Section Header */
 "Older than 2 days" = "Il y a plus de 2 jours";
 
-/* Notifications Months Section Header */
+/* Comments Months Section Header
+   Notifications Months Section Header */
 "Older than a Month" = "Il y a plus d'un mois";
 
-/* Notifications Weeks Section Header */
+/* Comments Weeks Section Header
+   Notifications Weeks Section Header */
 "Older than a Week" = "Il y a plus d'une semaine";
 
 /* Sort Order */
@@ -4789,9 +4795,6 @@
 /* Status for Media object that is being processed locally.
    Title of pending Comments filter. */
 "Pending" = "En attente";
-
-/* No comment provided by engineer. */
-"Pending moderation" = "En attention de modération";
 
 /* Name for the status of a post pending review.
    Pending review
@@ -5142,6 +5145,12 @@
 
 /* Title on display preview error */
 "Preview Unavailable" = "Aperçu non disponible";
+
+/* No comment provided by engineer. */
+"Preview page" = "Prévisualiser la page";
+
+/* No comment provided by engineer. */
+"Preview post" = "Prévisualiser l'article";
 
 /* Description of a Quick Start Tour */
 "Preview your new site to see what your visitors will see." = "Prévisualisez votre nouveau site pour voir ce que votre visiteurs verra.";
@@ -5617,6 +5626,9 @@
 /* Cancels a pending Email Change */
 "Revert Pending Change" = "Annuler les modifications en attente";
 
+/* Accessibility hint describing what happens if the undo button is tapped. */
+"Reverts the action performed on this notification." = "Annule l'action exécutée sur cette notification.";
+
 /* Title of a Quick Start Tour */
 "Review site pages" = "Passer en revue les pages du site";
 
@@ -5767,6 +5779,9 @@
 
 /* No comment provided by engineer. */
 "Search block label. Current text is" = "Rechercher une étiquette de bloc. Le texte actuel est";
+
+/* No comment provided by engineer. */
+"Search blocks" = "Rechercher des blocs";
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "Bouton de recherche. Le texte actuel du bouton est";
@@ -7083,7 +7098,8 @@
 /* Message explaining that Jetpack needs to be installed for a particular site. Reads like 'To use this app for example.com you'll need to have... */
 "To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "Pour utiliser cette application pour %@, l’extension Jetpack doit être installée et activée.";
 
-/* Insights 'Today' header
+/* Comments Today Section Header
+   Insights 'Today' header
    Label for most recent stat row.
    Notifications Today Section Header */
 "Today" = "Aujourd'hui";
@@ -7195,6 +7211,9 @@
    Share extension error dialog retry button label. */
 "Try again" = "Réessayez ";
 
+/* No comment provided by engineer. */
+"Try another search term" = "Essayez un autre terme de recherche";
+
 /* Customize Insights button title */
 "Try it now" = "Essayer maintenant !";
 
@@ -7284,6 +7303,9 @@
 
 /* Message displayed when opening the link to the downloadable backup fails. */
 "Unable to download file" = "Impossible de télécharger le fichier";
+
+/* No comment provided by engineer. */
+"Unable to embed media" = "Impossible d'embarquer les médias";
 
 /* The app failed to subscribe to the comments for the post */
 "Unable to follow conversation" = "Impossible de s’abonner à la conversation";
@@ -8088,6 +8110,12 @@
 /* Body text of alert asking if users want to try out the quick start checklist. */
 "We’ll walk you through the basics of building and growing your site" = "Nous allons vous présenter les bases de la construction et de la croissance de votre site.";
 
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the page." = "Nous mettons tout en œuvre pour proposer plus d'assistance pour les aperçus embarqués. En attendant, vous pouvez prévisualiser le contenu embarqué sur la page.";
+
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the post." = "Nous mettons tout en œuvre pour proposer plus d'assistance pour les aperçus embarqués. En attendant, vous pouvez prévisualiser le contenu embarqué sur l'article de blog.";
+
 /* Body text of alert letting users know we've upgraded the quick start checklist. */
 "We’ve added more tasks to help you grow your audience." = "Nous avons ajouté d’avantage de tâches pour vous aider à agrandir votre audience.";
 
@@ -8102,6 +8130,9 @@
 
 /* Title displayed via UIAlertController when a user inserts a document into a post. */
 "What do you want to do with this file: upload it and add a link to the file into your post, or add the contents of the file directly to the post?" = "Que voulez-vous faire avec ce fichier : le téléverser et ajouter un lien vers ce fichier dans votre article, ou ajouter le contenu de ce fichier directement dans l’article ?";
+
+/* No comment provided by engineer. */
+"What is a block?" = "Qu'est-ce qu'un bloc ?";
 
 /* No comment provided by engineer. */
 "What is alt text?" = "Qu’est-ce que le texte alternatif ?";
@@ -8296,7 +8327,8 @@
 /* Phrase displayed to begin a quick start tour that's been suggested. */
 "Yes, show me" = "Oui, montrez-moi";
 
-/* Notifications Yesterday Section Header */
+/* Comments Yesterday Section Header
+   Notifications Yesterday Section Header */
 "Yesterday" = "Hier";
 
 /* Paragraph displayed in the tableview header. The placholders are for the current username, highlight text and the current display name. */
