--- a/WordPress/Resources/he.lproj/Localizable.strings
+++ b/WordPress/Resources/he.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-23 11:54:07+0000 */
+/* Translation-Revision-Date: 2021-07-29 12:54:53+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: he_IL */
@@ -33,17 +33,19 @@
 /* Title for button when a site is missing server credentials. %1$@ is a placeholder for the string 'Enter your server credentials'. */
 "%1$@ to fix threats." = "%1$@ כדי לתקן את האיומים.";
 
-/* Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Singular button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Like" = "לייק ⁦%1$d⁩";
 
-/* Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Plural button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Likes" = "⁦%1$d⁩ לייקים";
 
-/* Singular format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d blogger likes this." = "בלוגר ⁦%1$d⁩ סימן לייק על זה.";
+/* Singular format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d blogger_ likes this." = "⁦%1$d⁩ בלוגר_ סימן לייק על זה.";
 
-/* Plural format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d bloggers like this." = "⁦%1$d⁩ בלוגרים סימנו לזה לייק.";
+/* Plural format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d bloggers_ like this." = "⁦%1$d⁩ בלוגרים_ סימנו לייק על זה.";
 
 /* Format string for displaying number of completed quickstart tutorials. %1$d is number completed, %2$d is total number of tutorials available. */
 "%1$d of %2$d completed" = "%1$d מתוך %2$d הושלמו";
@@ -245,8 +247,7 @@
 "(Untitled)" = "(ללא כותרת)";
 
 /* (no title)
-   Lets a user know that a local draft does not have a title.
-   the post has no title. */
+   Lets a user know that a local draft does not have a title. */
 "(no title)" = "(חסרה כותרת)";
 
 /* Example Comment notification displayed in the prologue carousel of the app. Username should be marked with * characters and will be displayed as bold text. */
@@ -1064,12 +1065,6 @@
 
 /* Title for a list of different button styles. */
 "Button Style" = "סגנון הכפתור";
-
-/* No comment provided by engineer. */
-"Button inside" = "כפתור בפנים";
-
-/* No comment provided by engineer. */
-"Button outside" = "כפתור בחוץ";
 
 /* No comment provided by engineer. */
 "Button position" = "מיקום הכפתור";
@@ -2285,6 +2280,12 @@
 "Double tap to open Bottom Sheet with available options" = "יש להקיש פעמיים כדי לפתוח את גיליון הכפתורים עם האפשרויות הזמינות";
 
 /* No comment provided by engineer. */
+"Double tap to preview page." = "הקש פעמיים לתצוגה מקדימה של העמוד.";
+
+/* No comment provided by engineer. */
+"Double tap to preview post." = "הקש פעמיים לתצוגה מקדימה של הפוסט.";
+
+/* No comment provided by engineer. */
 "Double tap to redo last change" = "יש להקיש פעמיים כדי לבצע שוב את השינוי האחרון";
 
 /* No comment provided by engineer. */
@@ -2465,6 +2466,9 @@
 /* Overlay message displayed when export content started */
 "Email sent!" = "האימייל נשלח!";
 
+/* No comment provided by engineer. */
+"Embed block previews are coming soon" = "תצוגות מקדימות של בלוק מוטמע יהיו אפשריות בקרוב";
+
 /* translators: accessibility text. %s: Embed caption. */
 "Embed caption. %s" = "כיתוב התמונה מוטמע. %s";
 
@@ -2474,8 +2478,8 @@
 /* No comment provided by engineer. */
 "Embed link" = "קישור מוטמע";
 
-/* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "כרגע לא ניתן לצפות בתוכן מוטמע מ-%s בעורך הנייד. צפה בעמוד כדי לראות את התוכן המוטמע.";
+/* No comment provided by engineer. */
+"Embed previews not yet available" = "תצוגות מקדימות מוטמעות עדיין לא זמינות";
 
 /* Title for the Emoji section */
 "Emoji" = "אמוג'י";
@@ -3619,11 +3623,11 @@
 /* Title displayed for selection of custom app icons that have white backgrounds. */
 "Light backgrounds" = "צבעים בהירים לרקע";
 
-/* Like (verb)
+/* Button title to Like a comment.
+   Like (verb)
    Like a post.
    Likes a Comment
-   Text for the 'like' button. Tapping marks a post in the reader as 'liked'.
-   Verb. Button title. Tap to like a commnet */
+   Text for the 'like' button. Tapping marks a post in the reader as 'liked'. */
 "Like" = "לייק";
 
 /* A comment is marked as liked */
@@ -3632,7 +3636,6 @@
 /* Filters Likes Notifications
    Label for Period Overview likes
    Label for post likes count.
-   Noun. Button title.  Tap to like a comment.
    Stats Likes Label
    Text for the 'like' button. Tapping removes the 'liked' status from a post.
    Title of the Likes Reader tab
@@ -4279,7 +4282,7 @@
 "No available sites" = "לא נמצאו אתרים זמינים";
 
 /* No comment provided by engineer. */
-"No button" = "ללא כפתור";
+"No blocks found" = "לא נמצאו בלוקים";
 
 /* An option in a list. Automatically approve no comments. */
 "No comments" = "אין תגובות";
@@ -4549,13 +4552,16 @@
 /* Title of a button style */
 "Official Buttons" = "כפתורים רשמיים";
 
-/* Notifications +2 Days Section Header */
+/* Comments +2 Days Section Header
+   Notifications +2 Days Section Header */
 "Older than 2 days" = "בן יותר מיומיים";
 
-/* Notifications Months Section Header */
+/* Comments Months Section Header
+   Notifications Months Section Header */
 "Older than a Month" = "בן יותר מחודש";
 
-/* Notifications Weeks Section Header */
+/* Comments Weeks Section Header
+   Notifications Weeks Section Header */
 "Older than a Week" = "בן יותר משבוע";
 
 /* Sort Order */
@@ -4789,9 +4795,6 @@
 /* Status for Media object that is being processed locally.
    Title of pending Comments filter. */
 "Pending" = "ממתין לאישור";
-
-/* No comment provided by engineer. */
-"Pending moderation" = "ממתין לאישור";
 
 /* Name for the status of a post pending review.
    Pending review
@@ -5142,6 +5145,12 @@
 
 /* Title on display preview error */
 "Preview Unavailable" = "תצוגה מקדימה לא זמינה";
+
+/* No comment provided by engineer. */
+"Preview page" = "תצוגה מקדימה של העמוד";
+
+/* No comment provided by engineer. */
+"Preview post" = "תצוגה מקדימה";
 
 /* Description of a Quick Start Tour */
 "Preview your new site to see what your visitors will see." = "באפשרותך להציג תצוגה מקדימה של האתר החדש כדי לבחון מה יראו המבקרים בו.";
@@ -5617,6 +5626,9 @@
 /* Cancels a pending Email Change */
 "Revert Pending Change" = "החזר שינוי בהמתנה למצב קודם";
 
+/* Accessibility hint describing what happens if the undo button is tapped. */
+"Reverts the action performed on this notification." = "מבטל את הפעולה שבוצעה על הודעה זו.";
+
 /* Title of a Quick Start Tour */
 "Review site pages" = "לבדוק עמודים באתר";
 
@@ -5767,6 +5779,9 @@
 
 /* No comment provided by engineer. */
 "Search block label. Current text is" = "תווית של בלוק החיפוש. הטקסט הנוכחי הוא";
+
+/* No comment provided by engineer. */
+"Search blocks" = "בלוקים של חיפוש";
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "הכפתור 'חיפוש'. הטקסט הנוכחי של הכפתור הוא";
@@ -7083,7 +7098,8 @@
 /* Message explaining that Jetpack needs to be installed for a particular site. Reads like 'To use this app for example.com you'll need to have... */
 "To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "כדי להשתמש באפליקציה הזאת עבור %@ עליך להתקין את התוסף של Jetpack ולהפעיל אותו.";
 
-/* Insights 'Today' header
+/* Comments Today Section Header
+   Insights 'Today' header
    Label for most recent stat row.
    Notifications Today Section Header */
 "Today" = "היום";
@@ -7195,6 +7211,9 @@
    Share extension error dialog retry button label. */
 "Try again" = "לנסות שוב";
 
+/* No comment provided by engineer. */
+"Try another search term" = "נסה מונח חיפוש אחר";
+
 /* Customize Insights button title */
 "Try it now" = "כדאי לנסות עכשיו";
 
@@ -7284,6 +7303,9 @@
 
 /* Message displayed when opening the link to the downloadable backup fails. */
 "Unable to download file" = "לא ניתן להוריד את הקובץ";
+
+/* No comment provided by engineer. */
+"Unable to embed media" = "לא ניתן להטמיע מדיה";
 
 /* The app failed to subscribe to the comments for the post */
 "Unable to follow conversation" = "לא ניתן לעקוב אחר השיחה";
@@ -8088,6 +8110,12 @@
 /* Body text of alert asking if users want to try out the quick start checklist. */
 "We’ll walk you through the basics of building and growing your site" = "אנחנו נלווה אותך בביצוע הפעולות הבסיסיות לבנייה של האתר שלך ולהגדלתו";
 
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the page." = "אנחנו עובדים קשה כדי להוסיף תמיכה לתצוגות מקדימות מוטמעות. בינתיים, תוכל לראות את התוכן המוטמע בעמוד.";
+
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the post." = "אנחנו עובדים קשה כדי להוסיף תמיכה לתצוגות מקדימות מוטמעות. בינתיים, תוכל לראות את התוכן המוטמע בפוסט.";
+
 /* Body text of alert letting users know we've upgraded the quick start checklist. */
 "We’ve added more tasks to help you grow your audience." = "הוספנו עוד משימות כדי לעזור לך להגדיל את הקהל.";
 
@@ -8102,6 +8130,9 @@
 
 /* Title displayed via UIAlertController when a user inserts a document into a post. */
 "What do you want to do with this file: upload it and add a link to the file into your post, or add the contents of the file directly to the post?" = "מה ברצונך לעשות עם הקובץ: האם להעלות אותו ולהוסיף קישור לקובץ בפוסט שלך או להוסיף את התוכן של הקובץ ישירות לפוסט?";
+
+/* No comment provided by engineer. */
+"What is a block?" = "מהו בלוק?";
 
 /* No comment provided by engineer. */
 "What is alt text?" = "מה זה טקסט חלופי?";
@@ -8296,7 +8327,8 @@
 /* Phrase displayed to begin a quick start tour that's been suggested. */
 "Yes, show me" = "כן, אני רוצה לראות";
 
-/* Notifications Yesterday Section Header */
+/* Comments Yesterday Section Header
+   Notifications Yesterday Section Header */
 "Yesterday" = "אתמול";
 
 /* Paragraph displayed in the tableview header. The placholders are for the current username, highlight text and the current display name. */
