--- a/WordPress/Resources/it.lproj/Localizable.strings
+++ b/WordPress/Resources/it.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-23 11:54:08+0000 */
+/* Translation-Revision-Date: 2021-07-27 15:54:47+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: it */
@@ -33,17 +33,19 @@
 /* Title for button when a site is missing server credentials. %1$@ is a placeholder for the string 'Enter your server credentials'. */
 "%1$@ to fix threats." = "%1$@ per risolvere le minacce.";
 
-/* Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Singular button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Like" = "%1$d Mi piace";
 
-/* Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Plural button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Likes" = "%1$d Mi piace";
 
-/* Singular format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d blogger likes this." = "Piace a %1$d blogger.";
+/* Singular format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d blogger_ likes this." = "%1$d blogger_ likes this.";
 
-/* Plural format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d bloggers like this." = "Piace a %1$d blogger.";
+/* Plural format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d bloggers_ like this." = "%1$d bloggers_ like this.";
 
 /* Format string for displaying number of completed quickstart tutorials. %1$d is number completed, %2$d is total number of tutorials available. */
 "%1$d of %2$d completed" = "%1$d di %2$d completati";
@@ -245,8 +247,7 @@
 "(Untitled)" = "(senza titolo)";
 
 /* (no title)
-   Lets a user know that a local draft does not have a title.
-   the post has no title. */
+   Lets a user know that a local draft does not have a title. */
 "(no title)" = "(senza titolo)";
 
 /* Example Comment notification displayed in the prologue carousel of the app. Username should be marked with * characters and will be displayed as bold text. */
@@ -1064,12 +1065,6 @@
 
 /* Title for a list of different button styles. */
 "Button Style" = "Stile del pulsante";
-
-/* No comment provided by engineer. */
-"Button inside" = "Pulsante interno";
-
-/* No comment provided by engineer. */
-"Button outside" = "Pulsante esterno";
 
 /* No comment provided by engineer. */
 "Button position" = "Posizione pulsante";
@@ -2285,6 +2280,12 @@
 "Double tap to open Bottom Sheet with available options" = "Tocca due volte per aprire il foglio in basso con le opzioni disponibili";
 
 /* No comment provided by engineer. */
+"Double tap to preview page." = "Tocca due volte per visualizzare l'anteprima della pagina.";
+
+/* No comment provided by engineer. */
+"Double tap to preview post." = "Tocca due volte per visualizzare l'anteprima dell'articolo.";
+
+/* No comment provided by engineer. */
 "Double tap to redo last change" = "Tocca due volte per ripetere l'ultima modifica";
 
 /* No comment provided by engineer. */
@@ -2465,6 +2466,9 @@
 /* Overlay message displayed when export content started */
 "Email sent!" = "Email inviata!";
 
+/* No comment provided by engineer. */
+"Embed block previews are coming soon" = "Le anteprime dei blocchi incorporate saranno presto disponibili";
+
 /* translators: accessibility text. %s: Embed caption. */
 "Embed caption. %s" = "Incorpora la didascalia. %s";
 
@@ -2474,8 +2478,8 @@
 /* No comment provided by engineer. */
 "Embed link" = "Incorpora link";
 
-/* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Al momento, i contenuti incorporati di %s non possono essere visualizzati nell'editor per dispositivi mobili. Visualizza in anteprima la pagina per vedere il contenuto incorporato.";
+/* No comment provided by engineer. */
+"Embed previews not yet available" = "Anteprime incorporate non ancora disponibili";
 
 /* Title for the Emoji section */
 "Emoji" = "Emoji";
@@ -3619,11 +3623,11 @@
 /* Title displayed for selection of custom app icons that have white backgrounds. */
 "Light backgrounds" = "Sfondi chiari";
 
-/* Like (verb)
+/* Button title to Like a comment.
+   Like (verb)
    Like a post.
    Likes a Comment
-   Text for the 'like' button. Tapping marks a post in the reader as 'liked'.
-   Verb. Button title. Tap to like a commnet */
+   Text for the 'like' button. Tapping marks a post in the reader as 'liked'. */
 "Like" = "Like";
 
 /* A comment is marked as liked */
@@ -3632,7 +3636,6 @@
 /* Filters Likes Notifications
    Label for Period Overview likes
    Label for post likes count.
-   Noun. Button title.  Tap to like a comment.
    Stats Likes Label
    Text for the 'like' button. Tapping removes the 'liked' status from a post.
    Title of the Likes Reader tab
@@ -4279,7 +4282,7 @@
 "No available sites" = "Nessun sito disponibile";
 
 /* No comment provided by engineer. */
-"No button" = "Nessun pulsante";
+"No blocks found" = "Nessun blocco trovato";
 
 /* An option in a list. Automatically approve no comments. */
 "No comments" = "Nessun commento";
@@ -4549,13 +4552,16 @@
 /* Title of a button style */
 "Official Buttons" = "Pulsanti ufficiali";
 
-/* Notifications +2 Days Section Header */
+/* Comments +2 Days Section Header
+   Notifications +2 Days Section Header */
 "Older than 2 days" = "Più vecchi di 2 giorni";
 
-/* Notifications Months Section Header */
+/* Comments Months Section Header
+   Notifications Months Section Header */
 "Older than a Month" = "Più vecchi di un mese";
 
-/* Notifications Weeks Section Header */
+/* Comments Weeks Section Header
+   Notifications Weeks Section Header */
 "Older than a Week" = "Più vecchi di una settimana";
 
 /* Sort Order */
@@ -4789,9 +4795,6 @@
 /* Status for Media object that is being processed locally.
    Title of pending Comments filter. */
 "Pending" = "In sospeso";
-
-/* No comment provided by engineer. */
-"Pending moderation" = "In attesa di moderazione";
 
 /* Name for the status of a post pending review.
    Pending review
@@ -5142,6 +5145,12 @@
 
 /* Title on display preview error */
 "Preview Unavailable" = "Anteprima non disponibile";
+
+/* No comment provided by engineer. */
+"Preview page" = "Pagina di anteprima";
+
+/* No comment provided by engineer. */
+"Preview post" = "Anteprima articolo";
 
 /* Description of a Quick Start Tour */
 "Preview your new site to see what your visitors will see." = "Visualizza un’anteprima del to nuovo sito per scoprire cosa vedono i tuoi visitatori.";
@@ -5617,6 +5626,9 @@
 /* Cancels a pending Email Change */
 "Revert Pending Change" = "Annulla modifica in sospeso";
 
+/* Accessibility hint describing what happens if the undo button is tapped. */
+"Reverts the action performed on this notification." = "Ripristina l'azione eseguita sulla notifica.";
+
 /* Title of a Quick Start Tour */
 "Review site pages" = "Verifica le pagine del sito";
 
@@ -5767,6 +5779,9 @@
 
 /* No comment provided by engineer. */
 "Search block label. Current text is" = "Cerca etichetta del blocco. Il testo attuale è";
+
+/* No comment provided by engineer. */
+"Search blocks" = "Cerca blocchi";
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "Pulsante di ricerca. Il testo del pulsante attuale è";
@@ -7083,7 +7098,8 @@
 /* Message explaining that Jetpack needs to be installed for a particular site. Reads like 'To use this app for example.com you'll need to have... */
 "To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "Per usare quest'app per %@, il plugin Jetpack dovrà essere installato e attivato.";
 
-/* Insights 'Today' header
+/* Comments Today Section Header
+   Insights 'Today' header
    Label for most recent stat row.
    Notifications Today Section Header */
 "Today" = "Oggi";
@@ -7195,6 +7211,9 @@
    Share extension error dialog retry button label. */
 "Try again" = "Riprova";
 
+/* No comment provided by engineer. */
+"Try another search term" = "Prova un altro termine di ricerca";
+
 /* Customize Insights button title */
 "Try it now" = "Prova ora";
 
@@ -7284,6 +7303,9 @@
 
 /* Message displayed when opening the link to the downloadable backup fails. */
 "Unable to download file" = "Impossibile scaricare il file";
+
+/* No comment provided by engineer. */
+"Unable to embed media" = "Non è possibile incorporare il media";
 
 /* The app failed to subscribe to the comments for the post */
 "Unable to follow conversation" = "Impossibile seguire la conversazione";
@@ -8088,6 +8110,12 @@
 /* Body text of alert asking if users want to try out the quick start checklist. */
 "We’ll walk you through the basics of building and growing your site" = "Ti insegneremo le basi per creare e far crescere il tuo sito";
 
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the page." = "Stiamo lavorando sodo per aggiungere il supporto per le anteprime incorporate. Nel frattempo, puoi visualizzare in anteprima il contenuto incorporato nella pagina.";
+
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the post." = "Stiamo lavorando sodo per aggiungere il supporto per le anteprime incorporate. Nel frattempo, puoi visualizzare in anteprima il contenuto incorporato nell'articolo.";
+
 /* Body text of alert letting users know we've upgraded the quick start checklist. */
 "We’ve added more tasks to help you grow your audience." = "Abbiamo aggiunto più attività per aiutarti ad aumentare il tuo pubblico.";
 
@@ -8102,6 +8130,9 @@
 
 /* Title displayed via UIAlertController when a user inserts a document into a post. */
 "What do you want to do with this file: upload it and add a link to the file into your post, or add the contents of the file directly to the post?" = "Cosa desideri fare con questo file: caricarlo e aggiungere un link al file nel tuo articolo o aggiungere i contenuti del file direttamente nell'articolo?";
+
+/* No comment provided by engineer. */
+"What is a block?" = "Che cos'è un blocco?";
 
 /* No comment provided by engineer. */
 "What is alt text?" = "Cos'è il testo alternativo?";
@@ -8296,7 +8327,8 @@
 /* Phrase displayed to begin a quick start tour that's been suggested. */
 "Yes, show me" = "Sì, visualizza";
 
-/* Notifications Yesterday Section Header */
+/* Comments Yesterday Section Header
+   Notifications Yesterday Section Header */
 "Yesterday" = "Ieri";
 
 /* Paragraph displayed in the tableview header. The placholders are for the current username, highlight text and the current display name. */
