--- a/WordPress/Resources/nl.lproj/Localizable.strings
+++ b/WordPress/Resources/nl.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-13 05:31:28+0000 */
+/* Translation-Revision-Date: 2021-07-27 07:59:10+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: nl */
@@ -33,17 +33,19 @@
 /* Title for button when a site is missing server credentials. %1$@ is a placeholder for the string 'Enter your server credentials'. */
 "%1$@ to fix threats." = "%1$@ om bedreigingen op te lossen.";
 
-/* Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Singular button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Like" = "%1$d like";
 
-/* Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Plural button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Likes" = "%1$d likes";
 
-/* Singular format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d blogger likes this." = "%1$d blogger vindt dit leuk.";
+/* Singular format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d blogger_ likes this." = "%1$d blogger_ vindt dit leuk.";
 
-/* Plural format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d bloggers like this." = "%1$d bloggers vinden dit leuk.";
+/* Plural format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d bloggers_ like this." = "%1$d bloggers_ vinden dit leuk.";
 
 /* Format string for displaying number of completed quickstart tutorials. %1$d is number completed, %2$d is total number of tutorials available. */
 "%1$d of %2$d completed" = "%1$d van %2$d afgerond";
@@ -245,8 +247,7 @@
 "(Untitled)" = "(Zonder titel)";
 
 /* (no title)
-   Lets a user know that a local draft does not have a title.
-   the post has no title. */
+   Lets a user know that a local draft does not have a title. */
 "(no title)" = "(Geen titel)";
 
 /* Example Comment notification displayed in the prologue carousel of the app. Username should be marked with * characters and will be displayed as bold text. */
@@ -1064,12 +1065,6 @@
 
 /* Title for a list of different button styles. */
 "Button Style" = "Knop style";
-
-/* No comment provided by engineer. */
-"Button inside" = "Knop binnen";
-
-/* No comment provided by engineer. */
-"Button outside" = "Knop buiten";
 
 /* No comment provided by engineer. */
 "Button position" = "Knop positie";
@@ -2285,6 +2280,12 @@
 "Double tap to open Bottom Sheet with available options" = "Dubbeltik om onderste blad te openen met beschikbare opties";
 
 /* No comment provided by engineer. */
+"Double tap to preview page." = "Dubbel tikken voor een voorvertoning van de pagina.";
+
+/* No comment provided by engineer. */
+"Double tap to preview post." = "Dubbel tikken voor een voorvertoning van het bericht.";
+
+/* No comment provided by engineer. */
 "Double tap to redo last change" = "Tik tweemaal om laatste wijziging opnieuw uit te voeren";
 
 /* No comment provided by engineer. */
@@ -2465,6 +2466,9 @@
 /* Overlay message displayed when export content started */
 "Email sent!" = "E-mail verzonden!";
 
+/* No comment provided by engineer. */
+"Embed block previews are coming soon" = "Insluit blok voorbeelden komen binnenkort";
+
 /* translators: accessibility text. %s: Embed caption. */
 "Embed caption. %s" = "Bijschrift ingesloten inhoud. %s";
 
@@ -2474,8 +2478,8 @@
 /* No comment provided by engineer. */
 "Embed link" = "Sluit link in";
 
-/* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Ingesloten inhoud van %s kan niet in de mobiele editor getoond worden op dit moment. Bekijk een voorbeeld van de pagina om de ingesloten inhoud te zien.";
+/* No comment provided by engineer. */
+"Embed previews not yet available" = "Insluit voorbeelden nog niet beschikbaar";
 
 /* Title for the Emoji section */
 "Emoji" = "Emoji";
@@ -3619,11 +3623,11 @@
 /* Title displayed for selection of custom app icons that have white backgrounds. */
 "Light backgrounds" = "Lichte achtergronden";
 
-/* Like (verb)
+/* Button title to Like a comment.
+   Like (verb)
    Like a post.
    Likes a Comment
-   Text for the 'like' button. Tapping marks a post in the reader as 'liked'.
-   Verb. Button title. Tap to like a commnet */
+   Text for the 'like' button. Tapping marks a post in the reader as 'liked'. */
 "Like" = "Vind ik leuk";
 
 /* A comment is marked as liked */
@@ -3632,7 +3636,6 @@
 /* Filters Likes Notifications
    Label for Period Overview likes
    Label for post likes count.
-   Noun. Button title.  Tap to like a comment.
    Stats Likes Label
    Text for the 'like' button. Tapping removes the 'liked' status from a post.
    Title of the Likes Reader tab
@@ -4279,7 +4282,7 @@
 "No available sites" = "Geen beschikbare sites";
 
 /* No comment provided by engineer. */
-"No button" = "Geen knop";
+"No blocks found" = "Geen blokken gevonden";
 
 /* An option in a list. Automatically approve no comments. */
 "No comments" = "Geen reacties";
@@ -4549,13 +4552,16 @@
 /* Title of a button style */
 "Official Buttons" = "Officiële knoppen";
 
-/* Notifications +2 Days Section Header */
+/* Comments +2 Days Section Header
+   Notifications +2 Days Section Header */
 "Older than 2 days" = "Ouder dan 2 dagen";
 
-/* Notifications Months Section Header */
+/* Comments Months Section Header
+   Notifications Months Section Header */
 "Older than a Month" = "Ouder dan een maand";
 
-/* Notifications Weeks Section Header */
+/* Comments Weeks Section Header
+   Notifications Weeks Section Header */
 "Older than a Week" = "Ouder dan een week";
 
 /* Sort Order */
@@ -4789,9 +4795,6 @@
 /* Status for Media object that is being processed locally.
    Title of pending Comments filter. */
 "Pending" = "In afwachting";
-
-/* No comment provided by engineer. */
-"Pending moderation" = "In afwachting van moderatie";
 
 /* Name for the status of a post pending review.
    Pending review
@@ -5142,6 +5145,12 @@
 
 /* Title on display preview error */
 "Preview Unavailable" = "Voorbeeld niet beschikbaar";
+
+/* No comment provided by engineer. */
+"Preview page" = "Voorvertoning pagina";
+
+/* No comment provided by engineer. */
+"Preview post" = "Bekijk voorbeeld";
 
 /* Description of a Quick Start Tour */
 "Preview your new site to see what your visitors will see." = "Bekijk een voorbeeld van je nieuwe site om te zien wat je bezoekers zien..";
@@ -5617,6 +5626,9 @@
 /* Cancels a pending Email Change */
 "Revert Pending Change" = "Wijziging in behandeling terugzetten";
 
+/* Accessibility hint describing what happens if the undo button is tapped. */
+"Reverts the action performed on this notification." = "Herroept de actie die op deze kennisgeving is uitgevoerd.";
+
 /* Title of a Quick Start Tour */
 "Review site pages" = "Beoordeel site pagina's";
 
@@ -5767,6 +5779,9 @@
 
 /* No comment provided by engineer. */
 "Search block label. Current text is" = "Zoekblok label. Huidige tekst is";
+
+/* No comment provided by engineer. */
+"Search blocks" = "Zoek blokken";
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "Zoekknop. Huidige knoptekst is";
@@ -7083,7 +7098,8 @@
 /* Message explaining that Jetpack needs to be installed for a particular site. Reads like 'To use this app for example.com you'll need to have... */
 "To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "Om deze app te gebruiken voor %@, moet de Jetpack plugin geïnstalleerd en geactiveerd zijn.";
 
-/* Insights 'Today' header
+/* Comments Today Section Header
+   Insights 'Today' header
    Label for most recent stat row.
    Notifications Today Section Header */
 "Today" = "Vandaag";
@@ -7195,6 +7211,9 @@
    Share extension error dialog retry button label. */
 "Try again" = "Probeer opnieuw";
 
+/* No comment provided by engineer. */
+"Try another search term" = "Probeer een andere zoekterm";
+
 /* Customize Insights button title */
 "Try it now" = "Probeer het nu";
 
@@ -7284,6 +7303,9 @@
 
 /* Message displayed when opening the link to the downloadable backup fails. */
 "Unable to download file" = "Kan bestand niet downloaden";
+
+/* No comment provided by engineer. */
+"Unable to embed media" = "Kan media niet insluiten";
 
 /* The app failed to subscribe to the comments for the post */
 "Unable to follow conversation" = "Kan gesprek niet volgen";
@@ -8088,6 +8110,12 @@
 /* Body text of alert asking if users want to try out the quick start checklist. */
 "We’ll walk you through the basics of building and growing your site" = "We lopen je door de basis om je site te bouwen en te laten groeien";
 
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the page." = "We werken hard aan het toevoegen van ondersteuning voor insluiting voorbeelden. In de tussentijd kan je een voorbeeld van de ingesloten inhoud van de pagina bekijken.";
+
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the post." = "We werken hard aan het toevoegen van ondersteuning voor insluit voorbeelden. In de tussentijd kan je een voorbeeld van de ingesloten inhoud van het bericht bekijken.";
+
 /* Body text of alert letting users know we've upgraded the quick start checklist. */
 "We’ve added more tasks to help you grow your audience." = "We hebben meer taken toegevoegd om je te helpen om je publiek te laten groeien.";
 
@@ -8102,6 +8130,9 @@
 
 /* Title displayed via UIAlertController when a user inserts a document into a post. */
 "What do you want to do with this file: upload it and add a link to the file into your post, or add the contents of the file directly to the post?" = "Wat wil je doen met dit bestand? Wil je het uploaden en een link naar het bestand aan je bericht toevoegen of wil je de inhoud van het bestand rechtstreeks aan het bericht toevoegen?";
+
+/* No comment provided by engineer. */
+"What is a block?" = "Wat is een blok?";
 
 /* No comment provided by engineer. */
 "What is alt text?" = "Wat is alt tekst?";
@@ -8296,7 +8327,8 @@
 /* Phrase displayed to begin a quick start tour that's been suggested. */
 "Yes, show me" = "Ja, toon me";
 
-/* Notifications Yesterday Section Header */
+/* Comments Yesterday Section Header
+   Notifications Yesterday Section Header */
 "Yesterday" = "Gisteren";
 
 /* Paragraph displayed in the tableview header. The placholders are for the current username, highlight text and the current display name. */
