--- a/WordPress/Resources/zh-Hans.lproj/Localizable.strings
+++ b/WordPress/Resources/zh-Hans.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-18 19:50:14+0000 */
+/* Translation-Revision-Date: 2021-07-27 14:54:08+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: zh_CN */
@@ -33,17 +33,19 @@
 /* Title for button when a site is missing server credentials. %1$@ is a placeholder for the string 'Enter your server credentials'. */
 "%1$@ to fix threats." = "%1$@修复威胁。";
 
-/* Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Singular button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Like" = "%1$d 人喜欢";
 
-/* Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Plural button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Likes" = "%1$d 人喜欢";
 
-/* Singular format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d blogger likes this." = "%1$d 位博主喜欢了。";
+/* Singular format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d blogger_ likes this." = "%1$d 位博主为此文章点赞。";
 
-/* Plural format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d bloggers like this." = "%1$d 位博主喜欢了。";
+/* Plural format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d bloggers_ like this." = "%1$d 位博主为此文章点赞。";
 
 /* Format string for displaying number of completed quickstart tutorials. %1$d is number completed, %2$d is total number of tutorials available. */
 "%1$d of %2$d completed" = "已完成 %1$d 个（共 %2$d 个）";
@@ -245,8 +247,7 @@
 "(Untitled)" = "（无标题）";
 
 /* (no title)
-   Lets a user know that a local draft does not have a title.
-   the post has no title. */
+   Lets a user know that a local draft does not have a title. */
 "(no title)" = "(无标题)";
 
 /* Example Comment notification displayed in the prologue carousel of the app. Username should be marked with * characters and will be displayed as bold text. */
@@ -1064,12 +1065,6 @@
 
 /* Title for a list of different button styles. */
 "Button Style" = "按钮风格";
-
-/* No comment provided by engineer. */
-"Button inside" = "内部按钮";
-
-/* No comment provided by engineer. */
-"Button outside" = "外部按钮";
 
 /* No comment provided by engineer. */
 "Button position" = "按钮位置";
@@ -2285,6 +2280,12 @@
 "Double tap to open Bottom Sheet with available options" = "双击以打开带有可用选项的底部表页";
 
 /* No comment provided by engineer. */
+"Double tap to preview page." = "轻点两次以预览页面。";
+
+/* No comment provided by engineer. */
+"Double tap to preview post." = "轻点两次以预览文章。";
+
+/* No comment provided by engineer. */
 "Double tap to redo last change" = "轻点两次以恢复上次的更改";
 
 /* No comment provided by engineer. */
@@ -2465,6 +2466,9 @@
 /* Overlay message displayed when export content started */
 "Email sent!" = "电子邮件已发送！";
 
+/* No comment provided by engineer. */
+"Embed block previews are coming soon" = "嵌入区块预览即将推出";
+
 /* translators: accessibility text. %s: Embed caption. */
 "Embed caption. %s" = "嵌入说明文字。%s";
 
@@ -2474,8 +2478,8 @@
 /* No comment provided by engineer. */
 "Embed link" = "嵌入链接";
 
-/* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "来自 %s 的嵌入内容目前无法在手机编辑器中查看。请预览该页面以查看嵌入内容。";
+/* No comment provided by engineer. */
+"Embed previews not yet available" = "嵌入预览尚不可用";
 
 /* Title for the Emoji section */
 "Emoji" = "表情图示";
@@ -3619,11 +3623,11 @@
 /* Title displayed for selection of custom app icons that have white backgrounds. */
 "Light backgrounds" = "浅色背景";
 
-/* Like (verb)
+/* Button title to Like a comment.
+   Like (verb)
    Like a post.
    Likes a Comment
-   Text for the 'like' button. Tapping marks a post in the reader as 'liked'.
-   Verb. Button title. Tap to like a commnet */
+   Text for the 'like' button. Tapping marks a post in the reader as 'liked'. */
 "Like" = "顶";
 
 /* A comment is marked as liked */
@@ -3632,7 +3636,6 @@
 /* Filters Likes Notifications
    Label for Period Overview likes
    Label for post likes count.
-   Noun. Button title.  Tap to like a comment.
    Stats Likes Label
    Text for the 'like' button. Tapping removes the 'liked' status from a post.
    Title of the Likes Reader tab
@@ -4279,7 +4282,7 @@
 "No available sites" = "无可用站点";
 
 /* No comment provided by engineer. */
-"No button" = "无按钮";
+"No blocks found" = "找不到区块";
 
 /* An option in a list. Automatically approve no comments. */
 "No comments" = "没有评论";
@@ -4549,13 +4552,16 @@
 /* Title of a button style */
 "Official Buttons" = "官方按钮";
 
-/* Notifications +2 Days Section Header */
+/* Comments +2 Days Section Header
+   Notifications +2 Days Section Header */
 "Older than 2 days" = "超过 2 天";
 
-/* Notifications Months Section Header */
+/* Comments Months Section Header
+   Notifications Months Section Header */
 "Older than a Month" = "超过 1 个月";
 
-/* Notifications Weeks Section Header */
+/* Comments Weeks Section Header
+   Notifications Weeks Section Header */
 "Older than a Week" = "超过 1 周";
 
 /* Sort Order */
@@ -4789,9 +4795,6 @@
 /* Status for Media object that is being processed locally.
    Title of pending Comments filter. */
 "Pending" = "待审";
-
-/* No comment provided by engineer. */
-"Pending moderation" = "等待审核";
 
 /* Name for the status of a post pending review.
    Pending review
@@ -5142,6 +5145,12 @@
 
 /* Title on display preview error */
 "Preview Unavailable" = "预览不可用";
+
+/* No comment provided by engineer. */
+"Preview page" = "预览页面";
+
+/* No comment provided by engineer. */
+"Preview post" = "预览文章";
 
 /* Description of a Quick Start Tour */
 "Preview your new site to see what your visitors will see." = "预览新网站以查看访问者将看到的内容。";
@@ -5617,6 +5626,9 @@
 /* Cancels a pending Email Change */
 "Revert Pending Change" = "恢复未审核的更改";
 
+/* Accessibility hint describing what happens if the undo button is tapped. */
+"Reverts the action performed on this notification." = "还原对此通知执行的操作。";
+
 /* Title of a Quick Start Tour */
 "Review site pages" = "审核网站页面";
 
@@ -5767,6 +5779,9 @@
 
 /* No comment provided by engineer. */
 "Search block label. Current text is" = "搜索区块标签。当前文字为";
+
+/* No comment provided by engineer. */
+"Search blocks" = "搜索区块";
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "搜索按钮。当前按钮文字为";
@@ -7083,7 +7098,8 @@
 /* Message explaining that Jetpack needs to be installed for a particular site. Reads like 'To use this app for example.com you'll need to have... */
 "To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "要将此应用用于 ％@，您需要安装并启用 Jetpack 插件。";
 
-/* Insights 'Today' header
+/* Comments Today Section Header
+   Insights 'Today' header
    Label for most recent stat row.
    Notifications Today Section Header */
 "Today" = "今日";
@@ -7195,6 +7211,9 @@
    Share extension error dialog retry button label. */
 "Try again" = "请重试";
 
+/* No comment provided by engineer. */
+"Try another search term" = "尝试其他搜索字词";
+
 /* Customize Insights button title */
 "Try it now" = "立即试用";
 
@@ -7284,6 +7303,9 @@
 
 /* Message displayed when opening the link to the downloadable backup fails. */
 "Unable to download file" = "无法下载文件";
+
+/* No comment provided by engineer. */
+"Unable to embed media" = "无法嵌入媒体";
 
 /* The app failed to subscribe to the comments for the post */
 "Unable to follow conversation" = "无法关注对话";
@@ -8088,6 +8110,12 @@
 /* Body text of alert asking if users want to try out the quick start checklist. */
 "We’ll walk you through the basics of building and growing your site" = "我们将带您了解构建和提升站点的基本知识。";
 
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the page." = "我们正在努力添加对嵌入预览的支持。 同时，您可以预览页面上的嵌入内容。";
+
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the post." = "我们正在努力添加对嵌入预览的支持。 同时，您可以预览文章上的嵌入内容。";
+
 /* Body text of alert letting users know we've upgraded the quick start checklist. */
 "We’ve added more tasks to help you grow your audience." = "我们添加了更多的任务，以帮助您增加受众。";
 
@@ -8102,6 +8130,9 @@
 
 /* Title displayed via UIAlertController when a user inserts a document into a post. */
 "What do you want to do with this file: upload it and add a link to the file into your post, or add the contents of the file directly to the post?" = "您想要使用此文件完成的操作：上传此文件并在文章中添加指向此文件的链接，还是直接在文章中添加该文件的内容？";
+
+/* No comment provided by engineer. */
+"What is a block?" = "什么是区块？";
 
 /* No comment provided by engineer. */
 "What is alt text?" = "什么是alt文字？";
@@ -8296,7 +8327,8 @@
 /* Phrase displayed to begin a quick start tour that's been suggested. */
 "Yes, show me" = "好的，显示相关内容";
 
-/* Notifications Yesterday Section Header */
+/* Comments Yesterday Section Header
+   Notifications Yesterday Section Header */
 "Yesterday" = "昨天";
 
 /* Paragraph displayed in the tableview header. The placholders are for the current username, highlight text and the current display name. */
