--- a/WordPress/Resources/zh-Hant.lproj/Localizable.strings
+++ b/WordPress/Resources/zh-Hant.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-23 11:54:07+0000 */
+/* Translation-Revision-Date: 2021-07-29 11:54:07+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: zh_TW */
@@ -33,17 +33,19 @@
 /* Title for button when a site is missing server credentials. %1$@ is a placeholder for the string 'Enter your server credentials'. */
 "%1$@ to fix threats." = "%1$@以修正威脅。";
 
-/* Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Singular button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Singular format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Like" = "%1$d 按讚";
 
-/* Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
+/* Plural button title to Like a comment. %1$d is a placeholder for the number of Likes.
+   Plural format string for view title displaying the number of post likes. %1$d is the number of likes. */
 "%1$d Likes" = "%1$d 按讚數";
 
-/* Singular format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d blogger likes this." = "%1$d 位部落客說這個讚。";
+/* Singular format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d blogger_ likes this." = "%1$d 位部落客都說讚。";
 
-/* Plural format string for displaying the number of post likes. %1$d is the number of likes. */
-"%1$d bloggers like this." = "%1$d 位部落客說這個讚。";
+/* Plural format string for displaying the number of post likes. %1$d is the number of likes. The underscore denotes underline and is not displayed. */
+"%1$d bloggers_ like this." = "%1$d 位部落客都說讚。";
 
 /* Format string for displaying number of completed quickstart tutorials. %1$d is number completed, %2$d is total number of tutorials available. */
 "%1$d of %2$d completed" = "已完成 %2$d 個，共 %1$d 個";
@@ -245,8 +247,7 @@
 "(Untitled)" = "(未命名)";
 
 /* (no title)
-   Lets a user know that a local draft does not have a title.
-   the post has no title. */
+   Lets a user know that a local draft does not have a title. */
 "(no title)" = "(無標題)";
 
 /* Example Comment notification displayed in the prologue carousel of the app. Username should be marked with * characters and will be displayed as bold text. */
@@ -1064,12 +1065,6 @@
 
 /* Title for a list of different button styles. */
 "Button Style" = "按鈕樣式";
-
-/* No comment provided by engineer. */
-"Button inside" = "按鈕內部";
-
-/* No comment provided by engineer. */
-"Button outside" = "按鈕外部";
 
 /* No comment provided by engineer. */
 "Button position" = "按鈕位置";
@@ -2285,6 +2280,12 @@
 "Double tap to open Bottom Sheet with available options" = "按兩下以開啟含有可用選項的底部工作表";
 
 /* No comment provided by engineer. */
+"Double tap to preview page." = "點兩下可預覽頁面。";
+
+/* No comment provided by engineer. */
+"Double tap to preview post." = "點兩下可預覽文章。";
+
+/* No comment provided by engineer. */
 "Double tap to redo last change" = "按兩次即可取消復原上次變更";
 
 /* No comment provided by engineer. */
@@ -2465,6 +2466,9 @@
 /* Overlay message displayed when export content started */
 "Email sent!" = "已傳送電子郵件！";
 
+/* No comment provided by engineer. */
+"Embed block previews are coming soon" = "內嵌區塊預覽功能即將推出";
+
 /* translators: accessibility text. %s: Embed caption. */
 "Embed caption. %s" = "內嵌字幕。 %s";
 
@@ -2474,8 +2478,8 @@
 /* No comment provided by engineer. */
 "Embed link" = "內嵌連結";
 
-/* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "目前無法在行動編輯器中查看 %s 的內嵌內容。 請預覽頁面以查看內嵌內容。";
+/* No comment provided by engineer. */
+"Embed previews not yet available" = "內嵌預覽尚無法使用";
 
 /* Title for the Emoji section */
 "Emoji" = "表情圖示";
@@ -3619,11 +3623,11 @@
 /* Title displayed for selection of custom app icons that have white backgrounds. */
 "Light backgrounds" = "淺色背景";
 
-/* Like (verb)
+/* Button title to Like a comment.
+   Like (verb)
    Like a post.
    Likes a Comment
-   Text for the 'like' button. Tapping marks a post in the reader as 'liked'.
-   Verb. Button title. Tap to like a commnet */
+   Text for the 'like' button. Tapping marks a post in the reader as 'liked'. */
 "Like" = "讚";
 
 /* A comment is marked as liked */
@@ -3632,7 +3636,6 @@
 /* Filters Likes Notifications
    Label for Period Overview likes
    Label for post likes count.
-   Noun. Button title.  Tap to like a comment.
    Stats Likes Label
    Text for the 'like' button. Tapping removes the 'liked' status from a post.
    Title of the Likes Reader tab
@@ -4279,7 +4282,7 @@
 "No available sites" = "無可用網站";
 
 /* No comment provided by engineer. */
-"No button" = "沒有按鈕";
+"No blocks found" = "找不到區塊";
 
 /* An option in a list. Automatically approve no comments. */
 "No comments" = "無留言";
@@ -4549,13 +4552,16 @@
 /* Title of a button style */
 "Official Buttons" = "官方按鈕";
 
-/* Notifications +2 Days Section Header */
+/* Comments +2 Days Section Header
+   Notifications +2 Days Section Header */
 "Older than 2 days" = "超過 2 天";
 
-/* Notifications Months Section Header */
+/* Comments Months Section Header
+   Notifications Months Section Header */
 "Older than a Month" = "超過 1 個月";
 
-/* Notifications Weeks Section Header */
+/* Comments Weeks Section Header
+   Notifications Weeks Section Header */
 "Older than a Week" = "超過 1 週";
 
 /* Sort Order */
@@ -4789,9 +4795,6 @@
 /* Status for Media object that is being processed locally.
    Title of pending Comments filter. */
 "Pending" = "待審核";
-
-/* No comment provided by engineer. */
-"Pending moderation" = "等待審核";
 
 /* Name for the status of a post pending review.
    Pending review
@@ -5142,6 +5145,12 @@
 
 /* Title on display preview error */
 "Preview Unavailable" = "無法預覽";
+
+/* No comment provided by engineer. */
+"Preview page" = "閱覽頁面";
+
+/* No comment provided by engineer. */
+"Preview post" = "預覽文章";
 
 /* Description of a Quick Start Tour */
 "Preview your new site to see what your visitors will see." = "預覽你的新網站即可查看訪客將會看到的內容。";
@@ -5617,6 +5626,9 @@
 /* Cancels a pending Email Change */
 "Revert Pending Change" = "回復待確認的變更";
 
+/* Accessibility hint describing what happens if the undo button is tapped. */
+"Reverts the action performed on this notification." = "恢復對此通知執行的操作。";
+
 /* Title of a Quick Start Tour */
 "Review site pages" = "檢閱網站頁面";
 
@@ -5767,6 +5779,9 @@
 
 /* No comment provided by engineer. */
 "Search block label. Current text is" = "搜尋區塊標籤。 目前的文字是";
+
+/* No comment provided by engineer. */
+"Search blocks" = "搜尋區塊";
 
 /* No comment provided by engineer. */
 "Search button. Current button text is" = "搜尋按鈕。 目前的按鈕文字是";
@@ -7083,7 +7098,8 @@
 /* Message explaining that Jetpack needs to be installed for a particular site. Reads like 'To use this app for example.com you'll need to have... */
 "To use this app for %@ you'll need to have the Jetpack plugin installed and activated." = "若要將此應用程式用於 %@，你需要安裝並啟用 Jetpack 外掛程式。";
 
-/* Insights 'Today' header
+/* Comments Today Section Header
+   Insights 'Today' header
    Label for most recent stat row.
    Notifications Today Section Header */
 "Today" = "今天";
@@ -7195,6 +7211,9 @@
    Share extension error dialog retry button label. */
 "Try again" = "再試一次";
 
+/* No comment provided by engineer. */
+"Try another search term" = "嘗試其他搜尋字詞";
+
 /* Customize Insights button title */
 "Try it now" = "立即試試";
 
@@ -7284,6 +7303,9 @@
 
 /* Message displayed when opening the link to the downloadable backup fails. */
 "Unable to download file" = "無法下載檔案";
+
+/* No comment provided by engineer. */
+"Unable to embed media" = "無法內嵌媒體";
 
 /* The app failed to subscribe to the comments for the post */
 "Unable to follow conversation" = "無法追蹤討論";
@@ -8088,6 +8110,12 @@
 /* Body text of alert asking if users want to try out the quick start checklist. */
 "We’ll walk you through the basics of building and growing your site" = "我們會逐步說明建立及長久經營網站的基本事項";
 
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the page." = "我們正努力為內嵌預覽提供支援。 在此期間，你可以預覽頁面內嵌內容。";
+
+/* No comment provided by engineer. */
+"We’re working hard on adding support for embed previews. In the meantime, you can preview the embedded content on the post." = "我們正努力為內嵌預覽提供支援。 在此期間，你可以預覽文章內嵌內容。";
+
 /* Body text of alert letting users know we've upgraded the quick start checklist. */
 "We’ve added more tasks to help you grow your audience." = "我們已新增更多任務，協助你拓展讀者群。";
 
@@ -8102,6 +8130,9 @@
 
 /* Title displayed via UIAlertController when a user inserts a document into a post. */
 "What do you want to do with this file: upload it and add a link to the file into your post, or add the contents of the file directly to the post?" = "你想要對這個檔案執行什麼動作：上傳檔案，並將該檔案的連結加入你的文章之中；或是將檔案內容直接新增至你的文章之中？";
+
+/* No comment provided by engineer. */
+"What is a block?" = "什麼是區塊？";
 
 /* No comment provided by engineer. */
 "What is alt text?" = "替代文字是什麼？";
@@ -8296,7 +8327,8 @@
 /* Phrase displayed to begin a quick start tour that's been suggested. */
 "Yes, show me" = "好，請顯示";
 
-/* Notifications Yesterday Section Header */
+/* Comments Yesterday Section Header
+   Notifications Yesterday Section Header */
 "Yesterday" = "昨天";
 
 /* Paragraph displayed in the tableview header. The placholders are for the current username, highlight text and the current display name. */
